[package]
name = "snoodle_text_editor"
version = "0.1.0"
authors = ["Chase Struse <chasestruse@gmail.com>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",         
    "default_fonts",
    "glow",             
    "persistence",   
] }

serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 

[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

